--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-firebaseui": "^6.0.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "three": "^0.137.5",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -43,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.23"
   }
 }
