--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/three": "^0.137.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "postcss-import": "^14.0.2",
